# wtfm-rs.github.io

./: .introduction.rs.swp  Cargo.toml  Makefile  README.md  index.html  introduction.rs  macro_expand.rs
.github/workflows/: macos-26.yml  ubuntu-24.04.yml  windows-2025.yml
doc/: crates.js  help.html  settings.html  src-files.js
doc/example_assert_true/: all.html  index.html
doc/example_echo_hello_world/: all.html  index.html
doc/example_hello_world/: all.html  index.html
doc/introduction/: all.html  index.html
doc/macro_expand/: all.html  index.html
doc/search.index/: 0d922ad8ba33.js  1eb8e51d3f30.js  234da4852aaf.js  3ce3b53ebe23.js  3f7f016cb603.js  4004c075bcfc.js  50d2c89b837f.js  55e9aa01a8fb.js  57f3a5fecefc.js  59540d92656a.js  root.js
doc/search.index/crateNames/: 1625c891315a.js  500cd6fc174d.js  50a1e90d8765.js  7bb57c3a840f.js  (+2 more)
doc/wtfm_rs/: all.html  fn.echo_hello_world.html  fn.echo_hello_world_v2.html  fn.hello_world.html  fn.is_true.html  fn.return_true.html  index.html  sidebar-items.js
doc/wtfm_rs_echo_hello_world/: all.html  fn.echo_hello_world.html  fn.echo_hello_world_v2.html  index.html  sidebar-items.js
doc/wtfm_rs_hello_world/: all.html  fn.hello_world.html  index.html
docs/: .rustc_info.json  .rustdoc_fingerprint.json  README.md
docs/doc/: crates.js  help.html  settings.html  src-files.js
examples/: example-assert-true.rs  example-echo-hello-world.rs  example-hello-world.rs
introduction/: Cargo.toml
introduction/src/: lib.rs
src/: lib.rs
wtfm-rs/: Cargo.toml
wtfm-rs/src/: lib.rs
wtfm-vec/src/: lib.rs
(+160 files in other folders)
